src/tests/testfiles/binary-operators/21.txt
testfiles/binary-operators/21.c:2:5: error: invalid operands to binary '%' (have 'int' and 'float')
10 % 5.0;
^
